--- a/CinemaTicketSystem/appsettings.json
+++ b/CinemaTicketSystem/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:cinem.database.windows.net,1433;Initial Catalog=CinemaDb;Persist Security Info=False;User ID=John;Password=098381@Ya;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    
+    "DefaultConnection": "Server=localhost;Port=3306;Database=CinemaDb;Uid=cinema_user;Pwd=cinema_pass123;"
   },
   "Logging": {
     "LogLevel": {
