--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mysql:
     image: mysql:8.0
@@ -17,18 +15,30 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+      interval: 5s
+      start_period: 40s
+    networks:
+      - cinema_network
 
   cinematicketsystem:
     build: .
     ports:
-      - "80:8080" # Map host port 80 to container port 8080
-      - "443:8081" # Map host port 443 to container port 8081 for HTTPS
+      - "8000:8080"
+      - "8443:8081"
     depends_on:
       mysql:
         condition: service_healthy
     environment:
       ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_URLS: http://+:8080
       ConnectionStrings__DefaultConnection: "Server=mysql;Port=3306;Database=CinemaDb;Uid=cinema_user;Pwd=cinema_pass123;"
+    networks:
+      - cinema_network
+    restart: on-failure
 
 volumes:
   mysql_data:
+
+networks:
+  cinema_network:
+    driver: bridge
